# DSS_KedroWorkshop

./: .gitignore  1. Data Cleaning.ipynb  2. Model Training.ipynb  3. Model Evaluation.ipynb  main.py  pyproject.toml  test.csv  train_clean.csv
daria-kedro-training/: README.md  pyproject.toml
daria-kedro-training/conf/base/: catalog.yml  parameters_my_first_pipeline.yml
daria-kedro-training/data/01_raw/: train_head.csv
daria-kedro-training/src/daria_kedro_training/: __init__.py  __main__.py  settings.py
daria-kedro-training/src/daria_kedro_training/pipelines/my_first_pipeline/: __init__.py  nodes.py  pipeline.py
daria-kedro-training/tests/pipelines/my_first_pipeline/: test_pipeline.py
kedro-exo/: .gitignore  README.md  pyproject.toml
kedro-exo/conf/base/: catalog.yml
kedro-exo/data/02_intermediate/: train_clean.csv
kedro-exo/data/03_primary/: X_test.csv  X_train.csv  X_val.csv  y_test.csv  y_train.csv  y_val.csv
kedro-exo/docs/source/: conf.py  index.rst
kedro-exo/src/kedro_exo/: __init__.py  __main__.py  hooks.py  settings.py
kedro-pro/: README.md  pyproject.toml
kedro-pro/conf/base/: catalog.yml  parameters_model_evaluation.yml  parameters_model_training.yml
kedro-pro/data/02_intermediate/: train_clean.csv
kedro-pro/data/05_model_input/: X_test.csv  X_train.csv  X_val.csv  best_params.json  best_params_lightgbm.json  best_params_randomforest.json  y_test.csv  y_train.csv  y_val.csv
kedro-pro/data/06_models/: best_model.pkl  lightgbm_model.pkl
kedro-pro/data/07_evaluation/: auc_score.json  auc_score_lightgbm.json  cm_lightgbm.pkl  (+6 more)
(+67 files in other folders)
