[project]
name = "dss-kedroworkshop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.29.5",
    "ipython>=8.35.0",
    "ipywidgets>=8.1.6",
    "jupyter>=1.1.1",
    "kedro>=0.19.12",
    "kedro-viz>=11.0.1",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.1",
    "notebook>=7.4.0",
    "numpy>=2.2.4",
    "optuna>=4.3.0",
    "shap>=0.47.1",
]
